# pyRFC3339

./: .gitignore  .hgignore  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml  python.yml  test-python.yml  test.yml  zizmor.yml
docs/: requirements.txt
docs/source/: conf.py  doc.rst  generator.rst  index.rst  parser.rst  pyrfc3339.rst  utils.rst
pyrfc3339/: __init__.py  generator.py  parser.py  utils.py
pyrfc3339/tests/: test_all.py  tests.py
